--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	    	</div>
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item1">
 			    <div class="box">
-			        <a>
+			        <a href="work/reach/index.html">
 			     	   <img src="work/reach/img/tb.jpg">
 			       	</a>
 			    </div>
@@ -157,21 +157,21 @@
 	    	
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item2">
 			    <div class="box">
-			        <a>
+			        <a href="work/dochange/index.html">
 			     	   <img src="work/dochange/img/tb2.jpg">
 			       	</a>
 			    </div>
 	    	</div>
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item3">
 			    <div class="box">
-			        <a>
+			        <a href="work/eventix/index.html">
 			     	   <img src="work/eventix/img/tb.jpg">
 			       	</a>
 			    </div>
 	    	</div>
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item4">
 			    <div class="box">
-			        <a>
+			        <a href="work/aac/index.html">
 			     	   <img src="work/aac/img/tb.jpg">
 			       	</a>
 			    </div>
