--- a/work/aac/index.html
+++ b/work/aac/index.html
@@ -47,7 +47,7 @@
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="navbar-brand page-scroll" href="../../test.html">Home</a>
+					<a class="navbar-brand page-scroll" href="../../index.html">Home</a>
 				</li>			
 				
 			</ul>
@@ -66,16 +66,20 @@
 					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">EMG-based AAC for people with severe motor dysfunction</h1>
 				</div>
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-3">
 						<p class="text-left" style="font-size: 1.1em">
-							<b>Date</b><br>
-							2015<br>
-							<br>
 							<b>Client</b><br>
 							<a>Private (Brazil)</a><br>
 							<br>
+							<b>Date</b><br>
+							2015, 4 weeks<br>
+							<br>
+						</p>
+					</div>
+					<div class="col-sm-3">
+						<p class="text-left" style="font-size: 1.1em">
 							<b>My role</b><br>
-							AT Specialist & Developer<br>
+							AT Specialist & Developer (Firmware and .NET)<br>
 							<br>
 							<b>Teamed up with</b><br>
 							Physiotherapist<br>
@@ -83,42 +87,11 @@
 							Biomedical Engineer<br>
 						</p>
 					</div>
-					<div class="col-sm-8">
-						<div class="row text-left">
-							<div class="col-md-3">
-							    <span class="fa-stack fa-3x">
-							       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							    	<i class="fa fa-users fa-stack-1x fa"></i>
-							    </span>
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Research</b><br> 
-									Task Analysis, Expert Review, Benchmarking<br>	
-									<br>
-								</p>
-							</div> 
-							<div class="col-md-3">
-							    <span class="fa-stack fa-3x">
-							     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
-							    </span>
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Define & Ideate</b><br> 
-									Stakeholder managment, Sketch<br>	
-									<br>
-								</p>
-							</div>
-							<div class="col-md-3">
-							    <span class="fa-stack fa-3x">
-							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-rocket fa-stack-1x fa"></i>
-							    </span>
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Prototype & Test</b><br> 
-									WPF Prototype, Usability Testing, Data Analysis<br>	
-									<br>
-								</p>
-							</div>
-						</div>
+					<div class="col-sm-6">
+						<p class="text-left" style="font-size: 1.1em">
+							<b>Skills</b><br>
+							Task Analysis, Expert Review, Benchmarking, Arduino Prototyping, .NET Prototyping, User Test, Data Analysis<br>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -142,12 +115,9 @@
 	</div>
 </header>
 
-
 <!-- Process Section -->
-<section id="process" class="bg-white">
+<!--section id="process" class="bg-white">
 	<div class="container content-section text-center">
-		
-		<!--What is it about?-->
 		<div class="row">
 			<div class="col-lg-10 col-lg-offset-1 text-center">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
@@ -184,13 +154,11 @@
 					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 				</p>
 				<iframe style="padding-top: 1em; padding-bottom: 2em;" class="col-sm-12" src="https://player.vimeo.com/video/244571225" width="800" height="640" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
 			</div>
 		</div>
 		
 	</div>
-</section>
-
+</section-->
 
 
 <!-- jQuery -->
