--- a/work/eventix/index.html
+++ b/work/eventix/index.html
@@ -47,7 +47,7 @@
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="navbar-brand page-scroll" href="../../test.html">Home</a>
+					<a class="navbar-brand page-scroll" href="../../index.html">Home</a>
 				</li>			
 				
 			</ul>
@@ -66,65 +66,33 @@
 					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">Alert Applet for a Ticketshop Dashboard</h2>
 				</div>
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-3">
 						<p class="text-left" style="font-size: 1.1em">
 							<b>Client</b><br>
-							<a href="http://eventix.io"> Eventix (Netherlands)</a><br>
+							<a href="http://eventix.io"> Eventix.IO (Netherlands)</a><br>
+							<br>
+							<b>Date & Duration</b><br>
+							2006, 5 weeks<br>
+							<br>
+						</p>
+					</div>
+					<div class="col-sm-3">
+						<p class="text-left" style="font-size: 1.1em">
+							<b>My role</b><br>
+							UX Designer<br>
 							<br>
 							<b>Teamed up with</b><br>
 							Front-end Developer<br>
 							Industrial Designer<br>
 							<br>
-							<b>My role</b><br>
-							User Experience Designer<br>
-							<br>
-							<b>Date</b><br>
-							2016<br>
-							<br>
 						</p>
 					</div>
-					<div class="col-sm-8">
-						<div class="row text-left">
-							<div class="col-md-4">
-							    <span class="fa-stack fa-3x">
-							       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							    	<i class="fa fa-users fa-stack-1x fa"></i>
-							    </span>
-							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Research</h4>
-							    <p style="color:#222; font-size: 1.1em">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p-->
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Research</b><br> 
-									Interview, Survey, Personas<br>	
-									<br>
-								</p>
-							</div> 
-							<div class="col-md-4">
-							    <span class="fa-stack fa-3x">
-							     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-users fa-stack-1x fa"></i>
-							    </span>
-							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Define & Ideate</h4>
-							    <p style="color:#222; font-size: 1.1em">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p-->
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Ideation</b><br> 
-									Brainstorming<br>	
-									<br>
-								</p>
-							</div>
-							<div class="col-md-4">
-							    <span class="fa-stack fa-3x">
-							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-rocket fa-stack-1x fa"></i>
-							    </span>
-							   	<!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Prototype & Test</h4>
-							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Prototype</b><br> 
-									UI Prototype, Axure, Illustrator<br>	
-									<br>
-								</p>
-							</div>
-						</div>
+					<div class="col-sm-6"> 
+						<p class="text-left" style="font-size: 1.1em">
+							<b>Skills</b><br>
+							Axure prototyping, Benchmarking, Contextual inquiry, Design review, Design thinking, Expert interviews, Heuristic evaluation, Multidisciplinary collaboration, Personas, Presentation to the client, Survey, Think aloud user tests, User interviews
+							<br>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -153,17 +121,16 @@
 
 
 <!-- Process Section -->
-<section id="process" class="bg-white">
+<!--section id="process" class="bg-white">
 	<div class="container content-section text-center">
-		
-		<!--What is it about?-->
+
 		<div class="row">
 			<div class="col-lg-10 col-lg-offset-1 text-left">
 				<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
 					About the client
 				</h1>
 				<p>
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+					
 				</p>
 				<iframe class="col-sm-12 text-center" width="600" height="500" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen></iframe>
 			</div>
@@ -173,7 +140,7 @@
 					Briefing
 				</h1>
 				<p class="text-left">
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+					As an online e-ticket solution for event organizers all around the word, Eventix's customers are festivals, theaters, and business or sports events. For this project, Eventix stakeholders were looking to optimize their ticketshop’s design and flow.
 				</p>
 				<img src="img/sketching.jpg">
 			</div>
@@ -203,7 +170,7 @@
 		</div>
 
 	</div>
-</section>
+</section-->
 
 
 <!-- jQuery -->
