--- a/work/reach/index.html
+++ b/work/reach/index.html
@@ -47,7 +47,7 @@
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="navbar-brand page-scroll" href="../../test.html">Home</a>
+					<a class="navbar-brand page-scroll" href="../../index.html">Home</a>
 				</li>	
 			</ul>
 		</div>
@@ -65,18 +65,20 @@
 					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">De Kooktafel: Cooking-aid Smart-Table for seniors</h2>
 				</div>
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-3">
 						<p class="text-left" style="font-size: 1.1em">
-							<b>Date</b><br>
-							2017<br>
-							<br>
-							<b>Clients</b><br>
+							<b>Client</b><br>
 							<a href="http://reach2020.eu"> Reach 2020 (Europe)</a><br>
-							<a href="">TU München (Germany)</a><br>
-							<a href="">TU Eindhoven (Netherlands)</a><br>
 							<br>
+							<b>Date & Duration</b><br>
+							2017, 6 weeks<br>
+							<br>
+						</p>
+					</div>
+					<div class="col-sm-3">
+						<p class="text-left" style="font-size: 1.1em">
 							<b>My role</b><br>
-							User Experience Designer<br>
+							UX Designer<br>
 							<br>
 							<b>Teamed up with</b><br>
 							Human-Factors Psychologist<br>
@@ -85,41 +87,10 @@
 							<br>
 						</p>
 					</div>
-					<div class="col-sm-8">
-						<div class="row text-left">
-							<div class="col-md-4">
-							    <span class="fa-stack fa-3x">
-							       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							    	<i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
-							    </span>
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Strategy</b><br> 
-									Design sprint, Benchmarking
-									<br>
-								</p>
-							</div> 
-							<div class="col-md-4">
-							    <span class="fa-stack fa-3x">
-							     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-users fa-stack-1x fa"></i>
-							    </span>
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Research</b><br> 
-									Contextual Inquiry, Interview, Task Analysis, Affinity Diagram<br>	
-									<br>
-								</p>
-							</div>
-							<div class="col-md-4">
-							    <span class="fa-stack fa-3x">
-							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-							        <i class="fa fa-rocket fa-stack-1x fa"></i>
-							    </span>
-							     <p class="text-left" style="font-size: 1.1em">
-									<b>Ideation, Prototype & Test</b><br> 
-									Sketch, Storyboard, Wizard of Oz, Usability Testing<br>	
-									<br>
-								</p>
-							</div>
+					<div class="col-sm-6">
+						<p class="text-left" style="font-size: 1.1em">
+							<b>Skills</b><br>
+							Design sprint, Benchmarking, Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Sketch, Storyboard, Wizard of Oz, Usability Testing<br>
 						</div>
 					</div>
 				</div>
@@ -137,7 +108,7 @@
 					<h1 class="text-center" style="color:white; font-weight: normal; font-size: 4em;">Challenge</h1>
 
 					<h2 class="project-description text-left" style="color:white; line-height:2em; font-size: 2em; padding-top: 20px; padding-right: 40px; padding-left: 40px">
-						Design a <strong class="hlw">digital prototype</strong> that <strong class="hlw">facilitates</strong> food-related activities for a specific group of <strong class="hlw">seniors</strong>
+						Design a digital prototype that facilitates food-related activities for a specific group of seniors.
 					</h2>
 				</div>
 			</div>
@@ -147,22 +118,20 @@
 
 
 <!-- Process Section -->
-<section id="process" class="bg-white">
+<!--section id="process" class="bg-white">
 	<div class="container content-section text-center">
-		
-		<!--What is it about?-->
 		<div class="row">
 			<div class="col-lg-10 col-lg-offset-1 text-center">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px; font-size:3em; ">About the client</h1>
+
 				<p class="text-left">
-					 <!--Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors.-->
-					 The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize. The interactive table, built by researchers of the Technical University of München, 
-					 <!--On this project, we worked for the European Consortium <b>Reach 2020</b>, in collaboration with the TU München and the TU Eindhoven.-->
+					 Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors.
+					 The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize. The interactive table, built by researchers of the Technical University of München.
 				</p>
 
 				<img src="img/lokaalplus.jpg">
 
-				<h1 class="service-heading" style="font-weight: normal; padding-top: 2em; font-size:3em; ">
+				<h1 class="service-heading" style="font-weight: normal; padding-top: 2em; font-size:3em;">
 					User Research
 				</h1>
 
@@ -170,18 +139,18 @@
 					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 				</p>
 
-				<!--p class="text-left">During four weeks we did:
+				<p class="text-left">During four weeks we did:
 					<b>contextual Task Analysis</b>of seniors during a cooking activity;
 					<b>qualitative data</b> clustering using <b>affinity diagram</b>;
 					Answer business questions with the <b>GV's design sprint</b>;
 					<b>Hi-Fi prototype</b> of a cooking-aid using an interactive table;
 					<b>user test</b> with 8 participants;
 					Ran three <b>iterations</b> of the design process.
-				</p-->
+				</p>
 
 				<img src="img/affinitydiagram.jpg">
 
-				<h1 class="service-heading" style="font-weight: normal; padding-top: 2em; font-size:3em; ">
+				<h1 class="service-heading" style="font-weight: normal; padding-top: 2em; font-size:3em;">
 					Design Sprint
 				</h1>
 
@@ -208,12 +177,10 @@
 				<p class="text-left">
 					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 				</p>
-				<!--img src="img/usertest2.jpg"-->
 
 				<iframe style="padding-bottom: 2em;" class="col-sm-12" src="https://player.vimeo.com/video/244456470" width="600" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<p><a href="https://vimeo.com/244456470"></p>
 				
-				<!--p class="text-left">
+				<p class="text-left">
 					As a result, we came across with many insightful factors such as:<br><br>
 					1. the interactive table demands a lot of the user's visual process: the table's dimensions and the parallax perspective of items displayed diagonally on the table requires a lot of their peripheral vision;<br>
 					2. the screen projection should be dynamically adjusted to the presence of artifacts over the counter (ingredients, cutlery, boards, etc.);<br>
@@ -225,8 +192,7 @@
 					At the end of the case, we provided a <b>prototype</b> to our stakeholders so that they can continue the next stage of the project. 
 					Reach Consortium have a prototype that can be applied in their context of use, like the Lokaal+ activity for instance.
 					From TU München side they were interested in the design implications that we <b>learned</b> by observing seniors using De Kooktafel during cooking activities.
-				</p-->
-
+				</p>
 
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 4em;">
 					UXcampNL '17
@@ -234,15 +200,15 @@
 				<p class="text-left">
 					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 				</p>
-				<!--p  class="text-left">
+				<p  class="text-left">
 					I executed contextual task analysis, acted as facilitator in one of the design sprints, developed Hi-Fi prototype, built and ran user test setup, shared project's results to stakeholders and gave a talk at the UXcampNL'17.
-				</p-->
+				</p>
 
 				<img src="img/uxcamp1.jpg">
+			</div>
 		</div>
-
 	</div>
-</section>
+</section-->
 
 
 <!-- jQuery -->
