--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		<div class="container gal-container">
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item0">
 			    <div class="box">
-			        <a>
+			        <a href="work/corbion/index.html">
 			     	   <img src="work/corbion/img/tb.jpg">
 			       	</a>
 			    </div>
