--- a/work/corbion/index.html
+++ b/work/corbion/index.html
@@ -63,16 +63,17 @@
 		<div class="row">
 			<div class="col-lg-10 col-lg-offset-1">
 				<div class="row">
-					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">Alert Applet for a Ticketshop Dashboard</h2>
+					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">Smart device for field operators in a factory</h2>
 				</div>
 				<div class="row">
 					<div class="col-sm-3">
 						<p class="text-left" style="font-size: 1.1em">
 							<b>Client</b><br>
-							<a href="http://eventix.io"> Eventix.IO (Netherlands)</a><br>
+							<a href="http://www.corbion.com"> Corbion (Netherlands)</a><br>
+							<a href="https://www.vhphp.nl"> VHPHP (Netherlands)</a><br>
 							<br>
 							<b>Date & Duration</b><br>
-							2006, 5 weeks<br>
+							2017, 9 weeks<br>
 							<br>
 						</p>
 					</div>
@@ -82,7 +83,8 @@
 							UX Designer<br>
 							<br>
 							<b>Teamed up with</b><br>
-							Front-end Developer<br>
+							Cognitive Psychologist
+							Computer Scientist<br>
 							Industrial Designer<br>
 							<br>
 						</p>
@@ -90,7 +92,7 @@
 					<div class="col-sm-6"> 
 						<p class="text-left" style="font-size: 1.1em">
 							<b>Skills</b><br>
-							Axure prototyping, Benchmarking, Contextual inquiry, Design review, Design thinking, Expert interviews, Heuristic evaluation, Multidisciplinary collaboration, Personas, Presentation to the client, Survey, Think aloud user tests, User interviews
+							Axure prototyping, Benchmarking, Contextual inquiry, Design thinking, Expert interviews, Literature Review, Presentation to the client, Survey, Think aloud user tests, User interviews
 							<br>
 						</p>
 					</div>
@@ -101,16 +103,16 @@
 </section>
 
 <!-- Intro Header -->
-<header class="intro eventix">
+<header class="intro corbion">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row" style="padding-top: 15em; padding-bottom: 10em">
 				<div class="col-md-10 col-md-offset-1">
 					<h1 class="text-center" style="color:white; font-weight: normal; font-size: 4em;">
-						Concept
+						Challenge
 					</h1>
 					<h2 class="project-description text-left" style="color:white; font-size: 2em; padding-top: 0em; padding-right: 2em; padding-left: 2em; line-height: 2.0em;">
-						A customizable dashboard where meaningful data can easily be compared and where the user is frequently updated.
+						.
 					</h2>
 
 				</div>
@@ -140,13 +142,13 @@
 					Briefing
 				</h1>
 				<p class="text-left">
-					Eventix is an online e-ticket solution for event organizers all around the word. Their customers are festivals, theaters, business and sports event organizers. For this project, stakeholders were looking to optimize their ticketshop’s design and flow. Our initial approach to the project focused on heuristic evaluation of the current dashboard, competitors analysis, interview with Eventix's clients and business requirements elicitation. The insights acquired from these activities gave a clearer direction on which steps to follow for the project.
+					As an online e-ticket solution for event organizers all around the word, Eventix's customers are festivals, theaters, and business or sports events. For this project, Eventix stakeholders were looking to optimize their ticketshop’s design and flow.
 				</p>
 				<img src="img/sketching.jpg">
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 text-center" style="padding-top: 2em;">
 				<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
-					Notification service
+					Alert applet
 				</h1>
 				<p class="text-left">
 					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
