--- a/work/corbion/index.html
+++ b/work/corbion/index.html
@@ -108,13 +108,12 @@
 		<div class="container">
 			<div class="row" style="padding-top: 15em; padding-bottom: 10em">
 				<div class="col-md-10 col-md-offset-1">
-					<h1 class="text-center" style="color:white; font-weight: normal; font-size: 4em;">
+					<!--h1 class="text-center" style="color:white; font-weight: normal; font-size: 4em;">
 						Challenge
 					</h1>
 					<h2 class="project-description text-left" style="color:white; font-size: 2em; padding-top: 0em; padding-right: 2em; padding-left: 2em; line-height: 2.0em;">
-						.
-					</h2>
-
+						
+					</h2-->
 				</div>
 			</div>
 		</div>
