--- a/work/eventix/index.html
+++ b/work/eventix/index.html
@@ -125,37 +125,42 @@
 	<div class="container content-section text-center">
 
 		<div class="row">
-			<div class="col-lg-10 col-lg-offset-1 text-left">
-				<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
-					About the client
-				</h1>
-				<p>
-					
-				</p>
-				<iframe class="col-sm-12 text-center" width="600" height="500" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen></iframe>
-			</div>
-
 			<div class="col-lg-10 col-lg-offset-1 text-center">
 				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
 					Briefing
 				</h1>
 				<p class="text-left">
-					Eventix is an online e-ticket solution for event organizers all around the word. Their customers are festivals, theaters, business and sports event organizers. For this project, stakeholders were looking to optimize their ticketshop’s design and flow. Our initial approach to the project focused on heuristic evaluation of the current dashboard, competitors analysis, interview with Eventix's clients and business requirements elicitation. The insights acquired from these activities gave a clearer direction on which steps to follow for the project.
+					Eventix is an online e-ticket solution for event organizers all around the world. Their customers are festivals, theaters, business and sports organizers. 
+
+					One of their services is the event's dashboard. This dashboard provides information about sales, insights from marketing, demographics about the audience, etc. These data are crucial to support decisions. 
+
+					Therefore in order to take better advantage of the features, user's experience should be positive. The dashboard requires an optimized design and flow. 
+
+					My team and I stepped into this matter to provide advices and design recommendations to Eventix.  
+				</p>
+				<iframe class="col-sm-12 text-center" width="600" height="500" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div class="col-lg-10 col-lg-offset-1 text-center" style="padding-top: 2em;">
+				<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
+					Process
+				</h1>
+				<p class="text-left">
+					Our initial focused on heuristic evaluation of the current dashboard, competitors analysis, interview with Eventix's clients and business requirements elicitation. The insights acquired from these activities gave a clearer direction on which steps to follow for the project.
 				</p>
 				<img src="img/sketching.jpg">
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 text-center" style="padding-top: 2em;">
 				<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
-					Notification service
+					Alert applets and notification
 				</h1>
 				<p class="text-left">
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+					Our initial focused on heuristic evaluation of the current dashboard, competitors analysis, interview with Eventix's clients and business requirements elicitation. The insights acquired from these activities gave a clearer direction on which steps to follow for the project.
 				</p>
-				<img src="img/flow.jpg">
+				<img src="img/schematic.jpg">
 				<p class="text-left">
 					"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 				</p>
-				<img src="img/schematic.jpg">
+				<img src="img/flow.jpg">
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 text-left">
 				<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px; font-size:3em; ">
