--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="col-md-10 col-md-offset-1">
           <ul class="masonry-wrap">
             <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-1"><a><img src="assets/images/portfolio-1.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-1"><a><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>Smart Device</h2>
@@ -167,16 +167,9 @@
                       <h2>DoChange</h2>
                       <p>Dashboard for Researchers</p>
                     </div>
-                  </div></a></div>
-            </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-4"><a><img src="assets/images/portfolio-1.jpg" alt="Portfolio-image"/>
-                  <div class="masonry-item-overlay">
-                    <div class="masonry-item-overlay-inner">
-                      <h2>Sonar</h2>
-                      <p>Instrument for music illiterates</p>
-                    </div>
-                  </div></a></div>
+                  </div>
+                </a>
+              </div>
             </li>
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
               <div class="masonry-item background-color-4"><a  href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
@@ -185,17 +178,33 @@
                       <h2>Alert Applet</h2>
                       <p>Ticketshop Dashboard</p>
                     </div>
-                  </div></a></div>
+                  </div>
+                </a>
+              </div>
             </li>
 
             <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-1"><a><img src="assets/images/b_p_aac.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-1"><a><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>AAC</h2>
                       <p>EMG-based AAC for people with ALS</p>
                     </div>
-                  </div></a></div>
+                  </div>
+                </a>
+              </div>
+            </li>
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
+              <div class="masonry-item background-color-2"><a><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2>Multi-patient ICU Monitor</h2>
+                      <p>Designing a multi-patient ICU monitor</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
