--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="col-md-10 col-md-offset-1">
           <ul class="masonry-wrap">
             <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-1"><a><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>Smart Device</h2>
@@ -152,7 +152,7 @@
                   </div></a></div>
             </li>
             <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-2"><a><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>De Kooktafel</h2>
@@ -161,7 +161,7 @@
                   </div></a></div>
             </li>
             <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-3"><a><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>DoChange</h2>
@@ -172,7 +172,7 @@
               </div>
             </li>
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-4"><a  href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>Alert Applet</h2>
@@ -184,7 +184,7 @@
             </li>
 
             <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-1"><a><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>AAC</h2>
@@ -196,11 +196,11 @@
             </li>
 
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-2"><a><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2>Multi-patient ICU Monitor</h2>
-                      <p>Designing a multi-patient ICU monitor</p>
+                      <p>ICU monitor</p>
                     </div>
                   </div>
                 </a>
