--- a/eventix.html
+++ b/eventix.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Designing for a Ticketshop Dashboard</title>
+    <title>Designing for a Ticketshop Dashboard | Daniel Mariano</title>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="HandheldFriendly" content="true"/>
@@ -89,8 +89,8 @@
         <div class="row section-head section-head-white">
           <h2 style="line-height: 1em;">DESIGNING FOR A TICKETSHOP DASHBOARD</h2>
           <ul class="breadcrumb">
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="#!">PROJECTS</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="">PROJECTS</a></li>
           </ul>
         </div>
       </div>
@@ -151,7 +151,7 @@
       </div>
     </section>
 
-    <section class="section section-white">
+    <!--section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
@@ -208,7 +208,7 @@
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
           <iframe class="col-sm-12" src="https://player.vimeo.com/video/244456470" width="600" height="700" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
-    </section>
+    </section-->
 
     <!--footer>
       <div class="container">
