--- a/intel.html
+++ b/intel.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Designing for AAC users | Daniel Mariano</title>
+    <title>Multi-patient ICU monitor | Daniel Mariano</title>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="HandheldFriendly" content="true"/>
@@ -34,62 +34,10 @@
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
-    <header class="main-navigation">
-      <div class="container-fluid">
-        <div class="col-md-2"><!--a href="home.html" class="logo"><img src="assets/images/logo/logo-white.png" alt="Logo"/></a-->
-          <div id="navicon">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
-        </div>
-        <div class="col-md-10">
-          <nav>
-            <ul role="menu">
-              <li><a href="home.html">HOME</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li class="dropdown"><a data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"> PROJECTS <span class="dropdown-icon">
-                    <svg width="10" height="7">
-                      <g></g>
-                      <line fill="none" stroke="#fdfdfd" x1="-4.54458" y1="-5.33302" x2="5.38279" y2="4.59435"></line>
-                      <line fill="none" stroke="#fdfdfd" x1="4.67324" y1="4.59752" x2="14.81695" y2="-5.54619"></line>
-                    </svg></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="corbion.html">SMART DEVICE FOR OPERATORS</a></li>
-                  <li><a href="reach.html">COOKING-AID SMART-TABLE</a></li>
-                  <li><a href="dochange.html">DASHBOARD FOR RESEARCHERS</a></li>
-                  <li><a href="eventix.html">TICKETSHOP DASHBOARD</a></li>
-                  <li><a href="aac.html">EMG-BASED AAC FOR ALS USERS</a></li>
-                  <li><a href="intel.html">MULTI-PATIENT ICU MONITOR</a></li>
-                </ul>
-              </li>
-              <li><a href="t_contact.html">CONTACT</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="mobile-navigation vertical-middle text-center">
-          <ul role="menu" class="text-center">
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="projects.html" class="mobile-dropdown">PROJECTS</a>
-              <div class="content">
-                <a href="corbion.html">SMART DEVICE FOR OPERATORS</a>
-                <a href="reach.html">COOKING-AID SMART-TABLE</a>
-                <a href="dochange">DASHBOARD FOR RESEARCHERS</a>
-                <a href="eventix.html">TICKETSHOP DASHBOARD</a>
-                <a href="aac.html">EMG-BASED AAC FOR ALS USERS</a>
-                <a href="intel.html">MULTI-PATIENT ICU MONITOR</a>
-              </div>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/aac/hero.jpg" class="header-introduction-small text-center background-image">
+    <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/intel/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
-          <h2 style="line-height: 1em;">DESIGNING FOR A AAC USER WITH ALS</h2>
+          <h2 style="line-height: 1em;">DESIGNING A MULTI-PATIENT ICU MONITOR</h2>
           <ul class="breadcrumb">
             <li><a href="index.html">HOME</a></li>
             <li><a href="">PROJECTS</a></li>
@@ -101,44 +49,44 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGNING FOR A AAC USER WITH ALS</h2>
+            <h2 style="line-height: 1.05em; font-size:6em;">DESIGNING A MULTI-PATIENT ICU MONITOR</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-flag1"></i>
-                <h4>Client & Place</h4>
-                <p style="font-size: 16px">Private<br>Brazil</p>
+                <h4>Project & Place</h4>
+                <p style="font-size: 16px">Case study<br>Brazil</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-4 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-calendar"></i>
                 <h4>Date & Duration</h4>
-                <p style="font-size: 16px">2015<br>4 weeks</p>
+                <p style="font-size: 16px">2014<br>10 days</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-4 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-world"></i>
                 <h4>Teamed up with</h4>
-                <p style="font-size: 16px">Physiotherapist<br>Speech-Language Pathologist<br>Biomedical Engineer</p>
+                <p style="font-size: 16px">Biomedical Engineer<br>Front-End Dev</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-sheet-pencil"></i>
                 <h4>Challenge</h4>
-                <p style="font-size: 16px">Design an alternative controller for a software that supports communication for people with severe motor dysfunction.</p>
+                <p style="font-size: 16px">Design a customizable dashboard where meaningful data can easily be compared and where the user is frequently updated.</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-gear"></i>
                 <h4>Methods & Tools</h4>
-                <p style="font-size: 16px">Arduino Prototyping, Benchmarking, Contextual Inquiry, Data Analysis, Expert Review, Multidisciplinary Collaboration, .NET Prototyping, Signal Processing, Task Analysis, User Test</p>
+                <p style="font-size: 16px">Benchmarking, Contextual inquiry, Data analysis, Design review, Expert interviews, Microcontroller, Multidisciplinary collaboration, Python, QT Creator, Signal Processing, UI Prototype</p>
               </div>
             </div>
         </div>
       </div>
     </section>
 
-    <section class="section section-white">
+    <!--section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
@@ -148,20 +96,35 @@
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">ABOUT THE CLIENT AND THEIR PROBLEM</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">According to the WHO, over 1 billion people globally experience disability. From those, a significant number have severe motor dysfunction due to a variaty of causes, such as Spinal Cord Injury, Amyotrophic Lateral Sclerosis (ALS), and so forth. In most cases, people have severe speech impairment, drastically reducing their independence. Health organization and scientific research has proved that rehabilitation and assistive devices can enable people with disabilities to became more independent and increase their quality of life. This case presents the design of a communication-aid device for an individual with ALS.</p>
-          <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/theoryofeverything.jpg" alt="Project Image"/></div>
-            </div>
-          </div>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Eventix is an online e-ticket solution for event organizers all around the world. Their customers are festivals, theaters, business and sports organizers. One of their products is the desktop dashboard. The dashboard provides to organizers information about sales, insights from marketing, demographics about the audience, etc. These data are fundamental to support business decisions. Therefore, their customers should have a great experience while using this feature. Eventix asked my team to design a dashboard with a better experience for customers that would also reduce the need for supports during and after the sales stage.</p>
+          <iframe class="col-sm-12 text-center" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
-    </section>
+    </section-->
 
     <!--section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">EMG-BASED AAC</h2>
+            <h2 style="line-height: 1.05em; font-size:6em;">RESEARCH</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>
+        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
+          <h3 class="os-animation">WHAT WE DID</h3>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">The current data that is presented on the dashboard feels insufficient for event organizers:<br>The information on the dashboard doesn’t fully communicate their needs.<br>There’s an overload of graphs.<br>The type of data visualisation doesn’t serve the needs - it has no added value for them.<br>Some graphs are not used at all because they don’t understand it.</p>
+          <div class="portfolio-single-content">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/eventix/persona.jpg" alt="Project Image"/></div>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head">
+            <h2 style="line-height: 1.05em; font-size:6em;">ALERT APPLET & NOTIFICATION FEED</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -170,19 +133,19 @@
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/hardware.jpg" alt="Project Image"/></div>
+              <div class="row"><img src="assets/images/eventix/scheme.jpg" alt="Project Image"/></div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/schematic.jpg" alt="Project Image"/></div>
+              <div class="row"><img src="assets/images/eventix/wireframe1.jpg" alt="Project Image"/></div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/app.jpg" alt="Project Image"/></div>
+              <div class="row"><img src="assets/images/eventix/newsfeed.jpg" alt="Project Image"/></div>
             </div>
           </div>
       </div>
-    </section-->
+    </section>
 
-    <!--section class="section section-white">
+    <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
@@ -193,7 +156,7 @@
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">USER TEST OUTCOMES AND DESIGN RECEOMENDATIONS</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
-          <iframe style="padding-top: 1em; padding-bottom: 2em;" class="col-sm-12" src="https://player.vimeo.com/video/244571225" width="600" height="700" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe class="col-sm-12" src="https://player.vimeo.com/video/244456470" width="600" height="700" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </section-->
 
