--- a/reach.html
+++ b/reach.html
@@ -34,9 +34,9 @@
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
-    <header class="main-navigation">
+    <!--header class="main-navigation">
       <div class="container-fluid">
-        <div class="col-md-2"><!--a href="home.html" class="logo"><img src="assets/images/logo/logo-white.png" alt="Logo"/></a-->
+        <div class="col-md-2">
           <div id="navicon">
             <div class="bar"></div>
             <div class="bar"></div>
@@ -46,7 +46,7 @@
         <div class="col-md-10">
           <nav>
             <ul role="menu">
-              <li><a href="home.html">HOME</a></li>
+              <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
               <li class="dropdown"><a data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"> PROJECTS <span class="dropdown-icon">
                     <svg width="10" height="7">
@@ -83,14 +83,14 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header-->
     <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/reach/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
           <h2 style="line-height: 1em;">DE KOOKTAFEL: A COOKING-AID SMART-TABLE</h2>
           <ul class="breadcrumb">
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="#!">PROJECTS</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="">PROJECTS</a></li>
           </ul>
         </div>
       </div>
